--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,42 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>ValieProject</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Les valises</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.8.1/css/bulma.min.css">
+  <style>
+      .tab-content {
+          border: 1px solid #dbdbdb;
+          display: none;
+          margin-top: -25px;
+          padding: 1rem;
+      }
+      .tab-content.active {
+          display: block;
+      }
+      .select, .input {
+          color: black;
+      }
+      .notification {
+          margin-top: -100px;
+          transition: all 1s;
+          position: absolute;
+          z-index:7;
+          width: 100%;
+      }
+      .notification.active {
+          margin-top: 134px;
+      }
+      .todo {
+          cursor: pointer;
+          background-color: silver;
+      }
+      .todo:hover {
+          opacity: .8;
+      }
+  </style>
 </head>
 <body>
   <app-root></app-root>
